refactor(formidable-engine): address Sonar findings and improve error propagation
- replace duplicated JCR property literals with constants (`j:protected`, `choices`)
- reduce cognitive complexity in `removeAce` and `validateRequired`
- add explicit `toString()` implementations for records containing `byte[]`
- replace `log + throw` patterns with contextual rethrows preserving the cause
- add cause propagation support to `SubmissionException` and `FormActionException`
- centralize final submission error logging in the servlet
- merge `targetId == null || isBlank()` validation in `ForwardSubmissionFormAction`
- replace `collect(Collectors.toList())` with `toList()` in choice list initializers
- remove unused imports and logging left behind by the refactors